--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/himanshu2406/Corona-Tracker" class="btn">View on GitHub</a>
       <a href="/worldmap_cases_interactive.html" class="btn">COVID - Interactive World Map</a>
-      <a href="https://github.com/himanshu2406/Corona-Tracker/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/himanshu2406/Corona-Tracker/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="/worldmap_progression.html" class="btn">Worldmap Progression</a>
+      <a href="/mortalityrate_progression.html" class="btn">Mortalityrate Progression</a>
     </section>
 
     <section class="main-content">
